--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: "${springBootVersion}"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: "${springBootVersion}"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
+    implementation group: 'org.springframework.data', name: 'spring-boot-starter-data-redis', version: "${springBootVersion}"
 }
