--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,16 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: "${springBootVersion}"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: "${springBootVersion}"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: "${springBootVersion}"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
+    implementation group:'org.springframework.cloud',name:'spring-cloud-dependencies',version:"Finchley.SR2"
+    implementation group:'org.springframework.cloud',name:'spring-cloud-starter-netflix-eureka-server',version:"${springCloudVersion}"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.2.2.RELEASE'
     implementation group: 'redis.clients', name: 'jedis', version: '2.10.2', force: true
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
 }
