--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+target/
+build/
+out/
+.gradle/
+.idea/
 
 # Package Files #
 *.jar
@@ -21,3 +26,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
