--- a/eureka/build.gradle
+++ b/eureka/build.gradle
@@ -37,8 +37,8 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
     implementation group:'org.springframework.cloud',name:'spring-cloud-dependencies',version:"Finchley.SR2"
     implementation group:'org.springframework.cloud',name:'spring-cloud-starter-netflix-eureka-server',version:"${springCloudVersion}"
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.2.2.RELEASE'
-    implementation group: 'redis.clients', name: 'jedis', version: '2.10.2', force: true
+//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.2.2.RELEASE'
+//    implementation group: 'redis.clients', name: 'jedis', version: '2.10.2', force: true
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
 }
