--- a/service/build.gradle
+++ b/service/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.2.2.RELEASE'
     implementation group: 'redis.clients', name: 'jedis', version: '2.10.2', force: true
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-
+    implementation group:'org.mybatis.spring.boot',name:'mybatis-spring-boot-starter',version: "2.1.2"
+    implementation group:'mysql' ,name:'mysql-connector-java',version: "8.0.20"
+    implementation group:'com.alibaba' ,name:'druid',version: "1.1.21"
 }
