--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.application.name=my_service
 
 #服务注册中心的配置内容，指定服务注册中心的位置
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:11111/eureka/
+
+
+#mysql
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=123456
