--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
+
+testYsg=ysg
+maxActive=30
