--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.2.5.RELEASE'
+        springBootVersion = '2.3.4.RELEASE'
         springCloudVersion = '2.2.2.RELEASE'
         springDataVersion = '2.2.5.RELEASE'
         springFrameworkVersion = '5.2.4.RELEASE'
@@ -29,6 +29,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.18'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: "${springBootVersion}"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
@@ -37,24 +38,27 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
     //注册中心
 //    implementation group:'org.springframework.cloud',name:'spring-cloud-starter-netflix-eureka-client',version:"${springCloudVersion}"
+    implementation group: "com.alibaba", name: "fastjson", version: "1.2.70"
+
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     //redis
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.2.2.RELEASE'
     implementation group: 'redis.clients', name: 'jedis', version: '2.10.2', force: true
 
+    //es
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-elasticsearch', version: "${springBootVersion}"
+    implementation group: 'io.searchbox', name: 'jest', version: '6.3.1'
+
     //mybatis 和mysql
-    implementation group:'org.mybatis.spring.boot',name:'mybatis-spring-boot-starter',version: "2.1.2"
+    implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: "2.1.2"
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
-    implementation group:'com.alibaba' ,name:'druid',version: "1.1.21"
+    implementation group: 'com.alibaba', name: 'druid', version: "1.1.21"
     implementation group: 'org.springframework', name: 'spring-jdbc', version: "${springFrameworkVersion}"
     implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.4'
     implementation group: 'org.mybatis', name: 'mybatis-spring', version: '2.0.4'
     //日志
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-logging', version: '2.3.0.RELEASE'
-
-    //rabbitmq
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '2.3.0.RELEASE'
 
 
 }
